[gd_scene load_steps=2 format=3 uid="uid://bqcxot0jq32i7"]

[ext_resource type="Script" path="res://stake_hud.gd" id="1_hnqqt"]

[node name="stake_hud" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hnqqt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -300.0
offset_right = 600.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpinBox" type="SpinBox" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
max_value = 3000.0

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Textfield"
placeholder_text = "Textedit Field for Stake Text"
wrap_mode = 1

[node name="PlayAudio" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Play Audio"

[node name="StopAudio" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Stop Audio"

[node name="Save" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "SAVE TO TEMP DATA"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Key:"

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Dialog:"

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Person:"

[node name="Label4" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Wav:"

[node name="Label5" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "WavPath:"

[node name="Label6" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Mood:"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Key" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "aaa"

[node name="Dialog" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "bbbb"

[node name="Person" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "ccc"

[node name="Wav" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "ddd"

[node name="WavPath" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "eee"

[node name="Mood" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "fff"

[node name="Comment_des" type="LineEdit" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
placeholder_text = "Comment_des"

[node name="Comment_loc" type="LineEdit" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
placeholder_text = "Comment_loc"

[node name="StakeSound" type="AudioStreamPlayer" parent="."]

[connection signal="value_changed" from="HBoxContainer/VBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/PlayAudio" to="." method="_on_play_audio_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/StopAudio" to="." method="_on_stop_audio_pressed"]
